[gd_scene load_steps=6 format=3 uid="uid://b66kvas3htwn7"]

[ext_resource type="Script" path="res://Game/Defense/Turm1/Standard-Tower.gd" id="1_by2g1"]
[ext_resource type="Texture2D" uid="uid://broq1vbrkluww" path="res://Game/Assets/Towers/TurmStandard.png" id="2_y8f7n"]
[ext_resource type="Script" path="res://Game/Defense/Turm1/ProgressBar.gd" id="3_3aqwr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_la7cb"]
size = Vector2(45, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qf2ul"]
size = Vector2(78.5, 894)

[node name="Standard-Tower" type="Node2D"]
rotation = 1.5708
scale = Vector2(2, 2)
script = ExtResource("1_by2g1")

[node name="Node2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D"]
position = Vector2(2.54322e-07, 6.5)
shape = SubResource("RectangleShape2D_la7cb")

[node name="Aim" type="Marker2D" parent="Node2D"]
position = Vector2(0.5, -29.5)

[node name="Texture" type="Sprite2D" parent="Node2D"]
texture = ExtResource("2_y8f7n")

[node name="Tower" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/Tower"]
position = Vector2(0.249981, -418)
shape = SubResource("RectangleShape2D_qf2ul")

[node name="GegnerScan" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/GegnerScan"]
position = Vector2(2.54322e-07, 6.5)
shape = SubResource("RectangleShape2D_la7cb")

[node name="BulletContainer" type="Node" parent="Node2D"]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_right = 4.0
offset_bottom = 27.0
script = ExtResource("3_3aqwr")

[node name="Timer" type="Timer" parent="ProgressBar"]

[connection signal="body_entered" from="Node2D/Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_entered" from="Node2D/GegnerScan" to="." method="_on_gegner_scan_body_entered"]
[connection signal="timeout" from="ProgressBar/Timer" to="." method="_on_timer_timeout"]
